# standard-bom-python

./: .gitattributes  .gitignore  AGENTS.md  COPYRIGHT.txt  LICENSE  MAINTAINERS  README.md  cliff.toml  pyproject.toml  tox.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/actions/setup-poetry-project/: action.yml
.github/workflows/: build-and-test.yml  ci.yml  release.yml
python/: .gitignore  .mypy.ini  README.md  pyproject.toml  tox.toml
python/standardbom/: __init__.py  immutable.py  model.py  parser.py
python/tests/: __init__.py  abstract_sbom_compare.py  metadata-external.cdx.json  metadata-external.json  multiple-dependencies.json  serial-number.json  test_immutable_list.py  test_model_sbom_component.py  test_model_sources.py  test_model_standard_bom.py  test_parser.py  test_profile.py  test_v2_parser.py  test_v3_parser.py  test_v3_parser_write.py
python/tests/v2/: serial-number.cdx.json
python/tests/v3/: full-valid.cdx.json  metadata-extensive.cdx.json  metadata-external.cdx.json  minimal-required.cdx.json  multiple-dependencies.cdx.json  serial-number.cdx.json  single-dependency.cdx.json
siemens_standard_bom/: immutable.py  model.py  parser.py
standardbom/: __init__.py  immutable.py  model.py  parser.py
tests/: __init__.py  abstract_sbom_compare.py  test_immutable_list.py  test_model_sbom_component.py  test_model_sources.py  test_model_standard_bom.py  test_profile.py  test_v2_parser.py  test_v3_parser.py  test_v3_parser_write.py
tests/v2/: full-valid.cdx.json  metadata-extensive.cdx.json  metadata-external.cdx.json  multiple-dependencies.cdx.json  serial-number.cdx.json
tests/v3/: full-valid.cdx.json  metadata-extensive.cdx.json  metadata-external.cdx.json  multiple-dependencies.cdx.json  serial-number.cdx.json  single-dependency.cdx.json
