[tool.poetry]
name = "standard-bom"
version = "2.1.0"
description = "Standard BOM Format Library"
keywords = ["sbom", "software-bill-of-materials", "cyclonedx", "cdx"]
authors = ["Hakan Dilek <hakan.dilek@siemens.com>", "Thomas Jensen <jensenthomas@siemens.com>"]
license = "MIT"
homepage = "https://sbom.siemens.io/"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
packages = [
    {include = "standardbom"},
    {include = "standardbom/py.typed"},
]

[tool.poetry.dependencies]
python = "^3.8.1"
python-dateutil = "^2.8.2"
# cyclonedx-python-lib v5.x is the highest version still on CycloneDX 1.4
cyclonedx-python-lib = "^5.2.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
pytest = "^8.0.0"
flake8 = "^7.0.0"
deepdiff = "^7.0.0"
mypy = "^1.8.0"
types-python-dateutil = "^2.8.19.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
